--- a/CChat/src/applicationProperties.properties
+++ b/CChat/src/applicationProperties.properties
@@ -3,3 +3,5 @@ database.password = a54Oa#22?3fsF
 database.url = jdbc:mysql://localhost/cchat
 database.type = MYSQL
 database.dialect = org.hibernate.dialect.MySQLInnoDBDialect
+
+data.dir = data
