--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -26,6 +26,7 @@ menu.admin.search = Pretraživanje
 
 # Admin menu
 admin.operatorList.title = Lista operatera
+admin.main.title = CChat admin
 
 operator.null = Operator se mora zadati!
 operator.role.empty = Operator mora imati zadanu ulogu!
@@ -42,3 +43,5 @@ nick.name.empty = Nadimak se mora zadati!
 nick.name.toLong = Nadimak je predugačko! Max {0}.
 nick.description.toLong = Opis je predugačak! Max {0}.
 nick.name.exists = Nadimak već postoji!
+
+admin.picture.upload.alreadyExists = Slika sa tim imenom već postoji!
