--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -15,18 +15,8 @@ login.passwordRequired = Lozinka ne smije biti prazna
 # Prepare.action
 prepare.success = Baza uspješno postavljena
 
-# AdminMain.action
+# Admin
 admin.main.title = Admin
-menu.admin.main = Glavna
-menu.admin.operators = Operateri
-menu.admin.nicks = Nadimci
-menu.admin.pictures = Slike
-menu.admin.statistics = Statistika
-menu.admin.search = Pretraživanje
-
-# Admin menu
-admin.operatorList.title = Lista operatera
-admin.main.title = CChat admin
 
 operator.null = Operator se mora zadati!
 operator.role.empty = Operator mora imati zadanu ulogu!
