--- a/CChatAdminSmartGWT/.settings/com.google.appengine.eclipse.core.prefs
+++ b/CChatAdminSmartGWT/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,3 +1,3 @@
-#Sun Jul 04 23:36:53 CEST 2010
+#Sat Aug 28 13:32:09 CEST 2010
 eclipse.preferences.version=1
-filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.3.0.jar|appengine-api-labs-1.3.0.jar|datanucleus-appengine-1.0.4.1.final.jar|datanucleus-core-1.1.5.jar|datanucleus-jpa-1.1.5.jar|geronimo-jpa_3.0_spec-1.1.1.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar
+filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.3.6.jar|appengine-api-labs-1.3.6.jar|appengine-jsr107cache-1.3.6.jar|jsr107cache-1.1.jar|datanucleus-appengine-1.0.7.final.jar|datanucleus-core-1.1.5.jar|datanucleus-jpa-1.1.5.jar|geronimo-jpa_3.0_spec-1.1.1.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar
