--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -7,6 +7,9 @@ global.password = Lozinka
 global.noJavascript = U postavkama vašeg web preglednika nije omogućeno izvršavanje Javascripta. Za uporabu ove aplikacije Javascript je neophodan.
 global.notLoggedIn = Niste prijavljeni
 global.role = Uloga
+global.loadingStyleAndImages = Učitavanje izgleda i slika
+global.loadingApplication = Učitavanje CChat aplikacije
+global.pleaseWait = Molimo pričekajte...
 
 # Login.action
 login.wrongUsernameOrPassword = Pogrešno korisničko ime ili lozinka
