--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -15,6 +15,7 @@ global.pleaseWait = Molimo pričekajte...
 login.wrongUsernameOrPassword = Pogrešno korisničko ime ili lozinka
 login.usernameRequired = Korisničko ime ne smije biti prazno
 login.passwordRequired = Lozinka ne smije biti prazna
+login.userIsDisabled = Korisnik je onemogućen
 
 # Prepare.action
 prepare.success = Baza uspješno postavljena
@@ -31,6 +32,7 @@ operator.password.toLong = Lozinka je predugačka! Max {0}.
 operator.name.toLong = Ime je predugačko! Max {0}.
 operator.surname.toLong = Prezime je predugačko! Max {0}.
 operator.email.toLong = E-Mail je predugačak! Max {0}.
+operator.admin.cantBeDisabled = Korisnik admin ne može biti onemogućen
 
 nick.null = Nadimak se mora zadati!
 nick.name.empty = Nadimak se mora zadati!
