--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -19,12 +19,15 @@ login.userIsDisabled = Korisnik je onemogućen
 
 # Prepare.action
 prepare.success = Baza uspješno postavljena
+prepare.title = Priprema baze
 
 # Admin
 admin.main.title = Admin
 
-operator.null = Operator se mora zadati!
-operator.role.empty = Operator mora imati zadanu ulogu!
+operator.disabled = Operater je onemogućen
+operator.notActive = Operater nije aktivan
+operator.null = Operater se mora zadati!
+operator.role.empty = Operater mora imati zadanu ulogu!
 operator.username.exists = Korisničko ime već postoji!
 operator.username.empty = Korisničko ime ne smije biti prazno
 operator.username.toLong = Korisničko ime predugačko! Max {0}.
