--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -10,6 +10,8 @@ global.role = Uloga
 global.loadingStyleAndImages = Učitavanje izgleda i slika
 global.loadingApplication = Učitavanje CChat aplikacije
 global.pleaseWait = Molimo pričekajte...
+global.exceptionDescription = Opis pogreške
+global.exceptionStack = Detalji pogreške
 
 # Login.action
 login.wrongUsernameOrPassword = Pogrešno korisničko ime ili lozinka
