--- a/CChat/src/hr/chus/cchat/struts2/action/operator/OperatorUserFunction-conversion.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/operator/OperatorUserFunction-conversion.properties
@@ -1,3 +1,4 @@
+user = hr.chus.cchat.struts2.converter.UserTypeConverter
 user.nick = hr.chus.cchat.struts2.converter.NickTypeConverter
 user.operator = hr.chus.cchat.struts2.converter.OperatorTypeConverter
 user.serviceProvider = hr.chus.cchat.struts2.converter.ServiceProviderTypeConverter
