--- a/CChat/WebContent/WEB-INF/web.xml
+++ b/CChat/WebContent/WEB-INF/web.xml
@@ -4,6 +4,25 @@
 	<display-name>CChat</display-name>
 
 
+	<filter>
+		<filter-name>charsetFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>charsetFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+
   	<!-- ++++++++++++++++++++++++++++++++ Spring ++++++++++++++++++++++++++++++++ -->
     <filter>
         <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
