--- a/CChat/src/applicationProperties.properties
+++ b/CChat/src/applicationProperties.properties
@@ -5,3 +5,6 @@ database.type = MYSQL
 database.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
 data.dir = data
+
+gateway.sendSmsUrlTemplate = http://someurl
+gateway.sendWapPushUrlTemplate = http://someurl
