Send message implemented for cgateway.

--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -46,3 +46,13 @@ nick.description.toLong = Opis je predugačak! Max {0}.
 nick.name.exists = Nadimak već postoji!
 
 admin.picture.upload.alreadyExists = Slika sa tim imenom već postoji!
+
+sendSms.httpException = Dogodila se greška u komunikaciji sa operaterom! Molimo pokušajte ponovo.
+sendSms.exception = Greška prilikom slanja poruke: {0}
+sendSms.operator.notRecognized = Operater nije prepoznat
+sendSms.operator.mustBeActive = Operater mora biti aktivan
+sendSms.user.notFound = Korisnik nije pronađen
+sendSms.msgType.notDefiend = MsgType nije definiran
+sendSms.text.notNull = Tekst ne smije biti null
+sendSms.serviceProvider.disabled = Nije moguće poslati poruku jer operater {0}-{1} je onemogućen
+sendSms.user.belongsToAnotherOperator = Nije moguće poslati poruku jer korisnik pripada operateru {0}
