--- a/CChat/src/applicationProperties.properties
+++ b/CChat/src/applicationProperties.properties
@@ -6,5 +6,7 @@ database.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
 data.dir = data
 
-gateway.sendSmsUrlTemplate = http://someurl
-gateway.sendWapPushUrlTemplate = http://someurl
+gateway.sendSmsUrl = http://213.147.115.180/cgateway/s/SendSms
+gateway.sendWapPushUrl = http://someurl
+gateway.username = test
+gateway.password = test
