--- a/CChat/WebContent/WEB-INF/web.xml
+++ b/CChat/WebContent/WEB-INF/web.xml
@@ -23,23 +23,15 @@
 	</filter-mapping>
 	
 
-  	<!-- ++++++++++++++++++++++++++++++++ Spring ++++++++++++++++++++++++++++++++ -->
-    <filter>
-        <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
-        <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
-    </filter>
-	
-	<filter-mapping>
-	 	<filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
-	 	<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
+  	<!-- Spring -->
+  	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
 
-  	<!-- ++++++++++++++++++++++++++++++++ Struts2, Tiles ++++++++++++++++++++++++++++++++ -->  
+  	<!-- Struts2, Tiles -->  
+  	
 	<filter>
 	 	<filter-name>struts2</filter-name>
 	 	<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
@@ -55,17 +47,34 @@
 	</listener> 
 
 
- 	<!-- ++++++++++++++++++++++++++++++++ Custom ++++++++++++++++++++++++++++++++ -->
+	<!-- Log4j change listener -->
+	
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:log4j.xml</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>log4jRefreshInterval</param-name>
+		<param-value>30000</param-value>
+	</context-param>
+	
+	<listener>
+		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+	</listener>
+	
+
+	<!-- Custom --> 
  	
 	<listener>
     	<listener-class>hr.chus.cchat.listener.SessionListener</listener-class>
 	</listener>
 	
 	
-	<!-- ++++++++++++++++++++++++++++++++ Global Tomcat settings ++++++++++++++++++++++++++++++++ -->
+	<!-- Global Tomcat settings -->
  	
  	<session-config>
-		<session-timeout>30</session-timeout>
+		<session-timeout>60</session-timeout>
 	</session-config>
 	
 	<welcome-file-list>
