Hibernate and ehcache lib updates. 2nd lvl cache improved.

--- a/CChat/src/applicationProperties.properties
+++ b/CChat/src/applicationProperties.properties
@@ -6,7 +6,7 @@ database.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
 data.dir = data
 
-gateway.sendSmsUrl = http://213.147.115.180/cgateway/s/SendSms
+gateway.sendSmsUrl = http://someurl
 gateway.sendWapPushUrl = http://someurl
 gateway.username = test
 gateway.password = test
