--- a/CChat/src/applicationProperties.properties
+++ b/CChat/src/applicationProperties.properties
@@ -6,6 +6,8 @@ database.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
 data.dir = data
 
+# If true will not contact gateway
+gateway.testSending = true
 gateway.sendSmsUrl = http://someurl
 gateway.sendWapPushUrl = http://someurl
 gateway.username = test
