Improvements and refactoring. SmartGWT 2.4.

--- a/CChat/src/applicationProperties.properties
+++ b/CChat/src/applicationProperties.properties
@@ -6,6 +6,7 @@ database.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
 data.dir = data
 
+# Default gateway properties
 # If true will not contact gateway
 gateway.testSending = true
 gateway.sendSmsUrl = http://someurl
