--- a/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -23,6 +23,9 @@ login.userIsDisabled = Korisnik je onemogućen
 prepare.success = Baza uspješno postavljena
 prepare.title = Priprema baze
 
+operation.empty = Parametar operation ne smije biti prazan
+operation.notSupported = Operacija nije podržana
+
 # Admin
 admin.main.title = Admin
 
@@ -37,7 +40,11 @@ operator.password.toLong = Lozinka je predugačka! Max {0}.
 operator.name.toLong = Ime je predugačko! Max {0}.
 operator.surname.toLong = Prezime je predugačko! Max {0}.
 operator.email.toLong = E-Mail je predugačak! Max {0}.
-operator.admin.cantBeDisabled = Korisnik admin ne može biti onemogućen
+operator.admin.cantBeDisabled = Operater admin ne može biti onemogućen
+operator.deleteNotAllowed.linkedToMessages = Operater ne može biti izbrisan jer ima dodijeljenih poruka. Može jedino biti onemogućen
+operator.canNotBeDeleted = Operater ne može biti obrisan
+
+user.notAllowedToEdit = Korisnik ne može biti uređen jer niste vlasnik ili pokušavate promijeniti operatera
 
 nick.null = Nadimak se mora zadati!
 nick.name.empty = Nadimak se mora zadati!
