--- a/CChat/src/applicationProperties.properties
+++ b/CChat/src/applicationProperties.properties
@@ -13,3 +13,8 @@ gateway.sendSmsUrl = http://someurl
 gateway.sendWapPushUrl = http://someurl
 gateway.username = test
 gateway.password = test
+
+# Target Media gateway
+targetMedia.gateway.username = 
+targetMedia.gateway.handle = 
+targetMedia.gateway.url = http://api.targetsms.nl/ps_handler/sendmessagev2.asp
