--- a/CChat/src/applicationProperties.properties
+++ b/CChat/src/applicationProperties.properties
@@ -15,6 +15,6 @@ gateway.username = test
 gateway.password = test
 
 # Target Media gateway
-targetMedia.gateway.username = 
-targetMedia.gateway.handle = 
+targetMedia.gateway.username = test
+targetMedia.gateway.handle = test
 targetMedia.gateway.url = http://api.targetsms.nl/ps_handler/sendmessagev2.asp
