--- a/CChat/src/test/resources/applicationProperties.properties
+++ b/CChat/src/test/resources/applicationProperties.properties
@@ -1,24 +1,14 @@
-app.version = ${pom.version}
+database.type = H2
+database.driver = org.h2.Driver
 
-database.type = MYSQL
-database.driver = com.mysql.jdbc.Driver
+database.username = 
+database.password = 
+database.url = jdbc:h2:mem:cchat_test;MODE=MYSQL
 
-database.username = cchat_user
-database.password = a54Oa#22?3fsF
-database.url = jdbc:mysql://localhost/cchat
-
-hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
-hibernate.hbm2ddl.auto = validate
+hibernate.dialect = org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto = create
 
 data.dir = data
-
-# Flyway database migration framework PRODUCTION
-flyway.validationMode = NONE
-flyway.validationErrorMode = FAIL
-
-# Flyway database migration framework DEVELOPMENT
-#flyway.validationMode = ALL
-#flyway.validationErrorMode = CLEAN
 
 # Default gateway properties
 # If true will not contact gateway
@@ -62,15 +52,15 @@ programd.console.use-shell = false
 programd.exit-immediately-on-startup = false
 programd.system-interpreter.directory = file:..
 # The string to prepend to all <system> calls (platform-specific). [String: ]
-# * Windows requires something like "cmd /c "; Linux doesn't (just comment out)
+#         * Windows requires something like "cmd /c "; Linux doesn't (just comment out)
 programd.system-interpreter.prefix = 
 programd.javascript-interpreter.classname = org.aitools.programd.interpreter.RhinoInterpreter
 programd.use-watcher = true
 programd.watcher.timer = 2000
 # Enable the heart? [boolean: false]
-# * The heart can beat and let you know the bot is alive.
-# * Right now the only kind of pulse is a message "I'm alive!" printed to the console.
-# * You can write a "Pulse" that can do something more useful, like ping a server.-->
+#        * The heart can beat and let you know the bot is alive.
+#        * Right now the only kind of pulse is a message "I'm alive!" printed to the console.
+#        * You can write a "Pulse" that can do something more useful, like ping a server.-->
 programd.heart.enabled = false
 programd.heart.pulserate = 5
 
