refs #23, #24, #25 - link chatbot with user console

--- a/CChat/src/test/resources/applicationProperties.properties
+++ b/CChat/src/test/resources/applicationProperties.properties
@@ -33,7 +33,7 @@ programd.conf-location.plugins = classpath:programd/conf/plugins.xml
 programd.merge.policy = COMBINE
 programd.merge.append.separator-string =   
 programd.merge.note-each = false
-programd.predicate-empty-default = undefined
+programd.predicate-empty-default = UNDEFIEND
 programd.response-timeout = 1000
 programd.category-load-notify-interval = 5000
 programd.load.notify-each-file = true
