--- a/CChat/src/main/resources/applicationProperties.properties
+++ b/CChat/src/main/resources/applicationProperties.properties
@@ -56,7 +56,7 @@ programd.javascript-allowed = false
 programd.gossip.path = file:/var/log/programd/gossip.txt
 programd.connect-string = CONNECT
 programd.inactivity-string = INACTIVITY
-programd.nodemapper-implementation = org.aitools.programd.graph.TwoOptimalNodemaster
+programd.nodemapper-implementation = org.aitools.programd.graph.OneOptimalNodemaster
 programd.predicate-cache.max = 5000
 programd.console.use-shell = false
 programd.exit-immediately-on-startup = false
