--- a/CChat/pom.xml
+++ b/CChat/pom.xml
@@ -54,7 +54,7 @@
 		<version.com.googlecode.flyway>1.7</version.com.googlecode.flyway>
 		<version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
 		<version.org.apache.tomcat>7.0.30</version.org.apache.tomcat>
-		<version.programd>4.6-FIXED</version.programd>
+		<version.programd>4.6-FIXED-SNAPSHOT</version.programd>
 
 		<!-- Test -->
 		<version.junit>4.10</version.junit>
