- virgopass gateway implementation - refs #28

--- a/CChat/src/main/resources/applicationProperties.properties
+++ b/CChat/src/main/resources/applicationProperties.properties
@@ -28,6 +28,11 @@ gateway.sendWapPushUrl = http://someurl
 gateway.username = test
 gateway.password = test
 
+# Virgopass gateway
+virgopass.gateway.login = test
+virgopass.gateway.password = test
+virgopass.gateway.url = http://billing.virgopass.com/mt.php
+
 # Target Media gateway
 #targetMedia.gateway.username = test
 #targetMedia.gateway.handle = test
