--- a/CChat/pom.xml
+++ b/CChat/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>hr.chus</groupId>
 	<artifactId>CChat</artifactId>
-	<version>1.0.6</version>
+	<version>1.0.7-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<developers>
