--- a/CChatSmartGWT/pom.xml
+++ b/CChatSmartGWT/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>hr.chus</groupId>
 	<artifactId>CChatSmartGWT</artifactId>
-	<version>1.0.6</version>
+	<version>1.0.7-SNAPSHOT</version>
 	
 	<developers>
 		<developer>
