- implemented backend logic for multilanguage support (route messages to operators based on language determined from msisdn rules) - refs #27, #29

--- a/CChat/src/main/resources/applicationProperties.properties
+++ b/CChat/src/main/resources/applicationProperties.properties
@@ -5,7 +5,7 @@ database.driver = com.mysql.jdbc.Driver
 
 database.username = cchat_user
 database.password = a54Oa#22?3fsF
-database.url = jdbc:mysql://localhost/cchat
+database.url = jdbc:mysql://localhost/cchat?useUnicode=true&characterEncoding=UTF-8
 
 hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 hibernate.hbm2ddl.auto = validate
