- receive sms -> service provider if first checked by sc and provider name and if not found language match is checked - max allowed chars implemented -> for ASCII chars 160, and for Unicode 70 - refs #27, #30

--- a/CChat/src/main/java/hr/chus/cchat/struts2/action/package_hr-WORK.properties
+++ b/CChat/src/main/java/hr/chus/cchat/struts2/action/package_hr-WORK.properties
@@ -61,5 +61,6 @@ sendSms.operator.mustBeActive = Operater mora biti aktivan
 sendSms.user.notFound = Korisnik nije pronađen
 sendSms.msgType.notDefiend = MsgType nije definiran
 sendSms.text.notNull = Tekst ne smije biti null
+sendSms.text.tooLong = Text je predugačak. Dozvoljeno {0} znakova.
 sendSms.serviceProvider.disabled = Nije moguće poslati poruku jer operater {0}-{1} je onemogućen
 sendSms.user.belongsToAnotherOperator = Nije moguće poslati poruku jer korisnik pripada operateru {0}
