Added missing gateways impl for keyzone and new endpoint for automatic bot reply

--- a/CChat/src/main/resources/applicationProperties.properties
+++ b/CChat/src/main/resources/applicationProperties.properties
@@ -3,8 +3,8 @@ app.version = ${pom.version}
 database.type = MYSQL
 database.driver = com.mysql.jdbc.Driver
 
-database.username = cchat_user
-database.password = a54Oa#22?3fsF
+database.username = root
+database.password = pass
 database.url = jdbc:mysql://localhost/cchat?useUnicode=true&characterEncoding=UTF-8
 
 hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
