--- a/CChat/src/test/resources/applicationProperties.properties
+++ b/CChat/src/test/resources/applicationProperties.properties
@@ -31,9 +31,9 @@ programd.schema-location.test-cases = classpath:programd/resources/schema/test-c
 programd.startup-file-path = classpath:programd/conf/bots.xml
 programd.conf-location.plugins = classpath:programd/conf/plugins.xml
 programd.merge.policy = COMBINE
-programd.merge.append.separator-string =   
+programd.merge.append.separator-string = 
 programd.merge.note-each = false
-programd.predicate-empty-default = UNDEFIEND
+programd.predicate-empty-default = UNDEFINED
 programd.response-timeout = 1000
 programd.category-load-notify-interval = 5000
 programd.load.notify-each-file = true
