--- a/CChat/pom.xml
+++ b/CChat/pom.xml
@@ -36,6 +36,7 @@
 		<version.commons-digester>3.2</version.commons-digester>
 		<version.commons-beanutils>1.8.3</version.commons-beanutils>
 		<version.commons-codec>1.5</version.commons-codec>
+        <version.commons-httpclient>3.1</version.commons-httpclient>
 		<version.javassist>3.16.1-GA</version.javassist>
 		<version.javax.activation>1.1.1</version.javax.activation>
 		<version.javax.servlet.jsp>2.2.1</version.javax.servlet.jsp>
@@ -405,6 +406,12 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>${version.commons-beanutils}</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>${version.commons-httpclient}</version>
 		</dependency>
 
 		<!-- Hibernate -->
